logs/test2.sh-gra956-16333148.out

Due to MODULEPATH changes, the following have been reloaded:
  1) openmpi/2.1.1

Python 3.5.4
  File "./test2.py", line 14
    print('load json)
                    ^
SyntaxError: EOL while scanning string literal
